# raillock

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  raillock_config.yaml  raillock_config.yaml.example
.github/workflows/: test.yml
examples/dspy-agent-example/: .gitignore  Makefile  README.md  pyproject.toml
examples/dspy-agent-example/mcp-server/: server.py
examples/dspy-agent-example/src/agent/: __init__.py  main.py  raillock_config.yaml
examples/malicious/: server.py
examples/most-basic/: .gitignore  Makefile  README.md  echo_client.py  echo_client_raillock_monkeypatch.py  echo_client_raillock_wrapper.py  echo_server.py  pyproject.toml  raillock_config.yaml
examples/most-basic-sse/: README.md  echo_client_railpath.py  echo_client_sse.py  echo_server_sse.py  pyproject.toml
raillock/: __init__.py  __main__.py  client.py  config.py  mcp_utils.py  utils.py
raillock/cli/: __main__.py  review_tools.py
raillock/cli/commands/: __init__.py  compare.py  review.py
raillock/cli/commands/web/: __init__.py
raillock/cli/commands/web/templates/: base.html
src/raillock/: client.py  config_utils.py  exceptions.py  utils.py
src/raillock/cli/: __main__.py
src/raillock/cli/commands/: review.py  webserver.py
src/raillock/cli/commands/web/: api.py  app.py
src/raillock/cli/commands/web/static/: site.webmanifest
src/raillock/cli/commands/web/static/css/: style.css
src/raillock/cli/commands/web/static/js/: app.js
src/raillock/cli/commands/web/templates/: index.html
tests/integration/: test_protocols.py
tests/static/: test_dead_code.py  whitelist.py
tests/unit/: test_checksum_filtering.py  test_cli.py  test_client.py  test_code_quality.py  test_config.py  test_config_utils.py  test_exceptions.py  test_mcp_utils.py  test_tool_matching.py  test_web_api.py  test_xss_protection.py
