[project]
name = "raillock"
version = "0.1.4"
description = "A Python library and CLI for MCP tool validation and review."
authors = [
    { name = "Curtis Collicutt", email = "curtis@serverascode.com" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "mcp==1.5.0",
    "requests",
    "pyyaml",
    "starlette",
    "uvicorn",
    "jinja2"
]

[project.urls]
Homepage = "https://github.com/yourusername/raillock"

[tool.setuptools]
packages = ["raillock"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov", 
    "pytest-asyncio>=0.26.0",
    "black",
    "flake8",
    "pexpect",
    "mcp==1.5.0",
    "trio",
    "vulture", 
    "tabulate",
    "pylint>=3.3.7",
    "ruff"
]



[project.scripts]
raillock = "raillock.cli.__main__:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta" 


