[project]
name = "dspy-agent-example"
version = "0.1.0"
description = "DSPy agent example project"
requires-python = ">=3.10"
dependencies = [
    "dspy",
    "mcp",
    "raillock @ file:///home/curtis/working/raillock-private"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]

[tool.hatch.metadata]
allow-direct-references = true 