[project]
name = "dspy-agent-example"
version = "0.1.0"
description = "DSPy agent example using RailLock"
requires-python = ">=3.10"

dependencies = [
    "dspy>=2.6.0",
    "raillock",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]

[tool.hatch.metadata]
allow-direct-references = true 