[project]
name = "most-basic-sse"
version = "0.1.0"
description = "Echo MCP SSE example with locked dependencies"
requires-python = ">=3.11"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "certifi==2025.4.26",
    "click==8.1.8",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.0",
    "idna==3.10",
    "mcp==1.5.0",
    "pydantic==2.11.3",
    "pydantic-core==2.33.1",
    "pydantic-settings==2.9.1",
    "python-dotenv==1.1.0",
    "sniffio==1.3.1",
    "sse-starlette==2.3.3",
    "starlette==0.46.2",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.0",
    "uvicorn==0.34.2",
    "requests"
] 